# anybuddy

./: .gitignore  README.md  SETUP.md  anybuddy.py  anybuddy_discord.py  anybuddy_setup.py  anybuddy_telegram.py  dev.ipynb  requirements.txt
meyhem/: .gitignore  .plash  Caddyfile  landing.html  main.py  meyhem.py  requirements.txt
meyhem/deploy/: .plash  landing.html  llms.txt  main.py  requirements.txt  robots.txt
meyhem/meyhem/: endpoints.md  session8_handoff.md  session9_handoff.md
meyhem/meyhem/backups/: search.py.bak
meyhem/meyhem/meyhem-pkg/: README.md  pyproject.toml
meyhem/meyhem/meyhem-pkg/meyhem/: client.py
