[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meyhem"
version = "0.1.1"
description = "Agent-native search client: smart search for agents, however you build them"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["httpx>=0.24", "fastcore>=1.5"]

[project.urls]
Homepage = "https://github.com/c5huracan/meyhem"
Documentation = "https://api.rhdxm.com/docs"
